kubernetes/apps/system-upgrade/upgrades/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: system-upgrade-egress-cluster
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
        - cluster
    - toEndpoints:
        - {}
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: system-upgrade-egress-cluster
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: kube-system
      toFQDNs:
      - matchPattern: 'factory.talos.dev'
      toPorts:
      - port: "443"
        protocol: TCP
